# idps-solution

./: idps.code-workspace
api/: Cargo.toml  Dockerfile
api/src/: main.rs  models.rs  pcap_analyzer.rs
client/: angular.json
idps/: docker-compose.yml
idps/logs/: eve.json
lab/: .gitignore  DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  WHATS_NEW.md  WPA2-SETUP.md  docker-compose.yml
lab/captures/: .gitignore
lab/db-init/: init.sql
lab/docs/: ATTACK-TESTING.md  EXTERNAL-PENTEST.md  EXTERNAL-TARGET-144.178.248.26.md  HOW-TO-EXPORT-FINDINGS.md  LAB-MENU.md  PENTEST-PLAYBOOK.md  pentest-checklist.md
lab/file-server/: Dockerfile
lab/kali-setup/: Dockerfile  init.sh  setup-tools.sh
lab/radius-server/: Dockerfile  users
lab/reports/: vulnerability_summary_20260127_152545.md
lab/scripts/: analyze-encryption.sh  analyze-pcap.sh  automated-pentest-suite.sh  automated-pentest.sh  brute-force-attack.sh  capture-filtered.sh  capture.sh  credential-testing.sh  ddos-attack.sh  demo-lab.sh  dns-security-check.sh  exploitation.sh  external-pentest.sh  extract-findings-from-kali.sh  generate-external-report.sh  generate-report.sh  generate-vulnerability-summary.sh  internal-pentest-report.sh  lab-menu.sh  network-discovery.sh  network-infiltration.sh.backup2  network-infiltration.sh.bak  network-infiltration.sh.bak3  network-infiltration.sh.old  network-test.sh  parse-nmap-results.sh  parse-nmap-to-findings.sh  real-world-pentest.sh  run-all-attacks.sh  run-external-pentest.sh  run-pentest.sh  test-findings-parsing.sh  test-network-segmentation.sh  (+2 more)
(+80 files in other folders)
