[package]
name = "idps-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.0"
actix-multipart = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
bollard = "0.16.1"
futures-util = "0.3.31"
pcap-file = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
